--- a/Estilo/estilo.css
+++ b/Estilo/estilo.css
@@ -14,37 +14,25 @@ h1, h3{
 
 h3{
     margin-top: 1.5em;
+    margin-bottom: 0.3em;
 }
 
 
-.texto{
-    width: 15em;
+.texto, .botao{
+    width: 30em;
     height: 2em;
-    margin: 0.4em;    
+    margin: 0.4em;
+    font-weight: bold;
+    font-size: 15px;    
+}
+.botao{
+    width: 10em;
 }
 
 #tabela{
     width: 100%;
-    max-width: 34em;
+    max-width: 650px;
     margin: auto;
-}
-
-.data-local{
-    text-align: center;
-    padding: 0.2em;
-}
-#selecao1{
-    width: 7em;
-    display: inline-block;
-    text-align: right;
-}
-
-.placar, .bandeira{
-    width: 3em;
-    height: 2em;
-    text-align: center;
-    margin: 0em 0.5em;
-    vertical-align: bottom;
 }
 
 .placar-completo{
@@ -53,5 +41,42 @@ h3{
     background-color: beige;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.486);
     margin: auto;
+    font-weight: bold;
+    font-size: 13px;
     
 }
+
+
+.data-local{
+    text-align: center;
+    padding: 0.2em;
+}
+#selecao1, #selecao2{
+    width: 8em;
+    display: inline-block;
+    text-align: right;
+    height: 35px;
+
+    
+}
+
+#selecao2{
+    text-align: left;
+    
+}
+
+
+.placar, .bandeira{
+    width: 60px;
+    height: 35px;
+    text-align: center;
+    margin: 0em 0.5em;
+    vertical-align: middle;
+    padding: 0;
+}
+.placar{
+    border-radius: 4px;
+    font-weight: bold;
+    font-size: 25px;
+}
+
