--- a/Estilo/estilo.css
+++ b/Estilo/estilo.css
@@ -3,20 +3,23 @@
     padding: 0px;
 }
 
-
 body{
     font-family: Helvetica, Arial, sans-serif;
     margin-left: 0.5em;
 }
+
 h1, h3{
     text-align: center;
+}
+
+h1{
+    margin: 10px 0px;   
 }
 
 h3{
     margin-top: 1.5em;
     margin-bottom: 0.3em;
 }
-
 
 .texto, .botao{
     width: 30em;
@@ -25,14 +28,20 @@ h3{
     font-weight: bold;
     font-size: 15px;    
 }
+
 .botao{
     width: 10em;
 }
 
 #tabela{
     width: 100%;
-    max-width: 650px;
     margin: auto;
+}
+
+.grupo{
+    display: inline-block;
+    width: 548px;
+    margin: 5px;
 }
 
 .placar-completo{
@@ -43,14 +52,13 @@ h3{
     margin: auto;
     font-weight: bold;
     font-size: 13px;
-    
 }
-
 
 .data-local{
     text-align: center;
     padding: 0.2em;
 }
+
 #selecao1, #selecao2{
     width: 8em;
     display: inline-block;
@@ -67,7 +75,7 @@ h3{
 
 
 .placar, .bandeira{
-    width: 60px;
+    width: 53px;
     height: 35px;
     text-align: center;
     margin: 0em 0.5em;
