--- a/Estilo/estilo.css
+++ b/Estilo/estilo.css
@@ -5,7 +5,7 @@
 
 body{
     font-family: Helvetica, Arial, sans-serif;
-    margin-left: 0.5em;
+    margin-left: 0.1em;
 }
 
 h1, h3{
@@ -13,12 +13,15 @@ h1, h3{
 }
 
 h1{
-    margin: 10px 0px;   
+    margin: 20px 0px;   
 }
 
 h3{
     margin-top: 1.5em;
     margin-bottom: 0.3em;
+}
+p{
+    margin: 20px 0px;
 }
 
 .texto, .botao{
@@ -64,8 +67,6 @@ h3{
     display: inline-block;
     text-align: right;
     height: 35px;
-
-    
 }
 
 #selecao2{
@@ -87,4 +88,3 @@ h3{
     font-weight: bold;
     font-size: 25px;
 }
-
