--- a/Estilo/estilo.css
+++ b/Estilo/estilo.css
@@ -5,26 +5,33 @@
 
 body{
     font-family: Helvetica, Arial, sans-serif;
-    margin-left: 0.1em;
-}
-
-h1, h3{
-    text-align: center;
+    max-width: 1200px;
+    background-color: rgb(188, 188, 252);
 }
 
 h1{
+    text-align: center;
     margin: 20px 0px;   
 }
 
 h3{
+    text-align: center;
     margin-top: 1.5em;
     margin-bottom: 0.3em;
 }
-p{
-    margin: 20px 0px;
+
+.dados-pessoais{
+    border: 1px solid gray;
+    min-height: 60px;
+    height: auto;
+    margin: 10px;
+    padding: 3px;
+    font-size: 20px;
+    width: 95%;
+    background-color: aquamarine;
 }
 
-.texto, .botao{
+.texto, .botao, .opcao-pais{
     width: 30em;
     height: 2em;
     margin: 0.4em;
@@ -32,19 +39,11 @@ p{
     font-size: 15px;    
 }
 
-.botao{
-    width: 10em;
-}
-
-#tabela{
-    width: 100%;
-    margin: auto;
-}
-
 .grupo{
     display: inline-block;
-    width: 548px;
-    margin: 5px;
+    margin: 2%;
+    width: 550px;
+    
 }
 
 .placar-completo{
@@ -71,9 +70,7 @@ p{
 
 #selecao2{
     text-align: left;
-    
 }
-
 
 .placar, .bandeira{
     width: 53px;
@@ -83,16 +80,21 @@ p{
     vertical-align: middle;
     padding: 0;
 }
+
 .placar{
     border-radius: 4px;
     font-weight: bold;
     font-size: 25px;
-    
 }
 
+/*extra:*/
 strong{
     text-decoration: underline;
 }
 .invisivel{
     display: none
+}
+
+.botao{
+    width: 10em;
 }
