--- a/Estilo/estilo.css
+++ b/Estilo/estilo.css
@@ -1,7 +1,7 @@
 *{
     margin: 0px;
     padding: 0px;
-    border: 0px;
+    /* border: solid 1px blue; */
 }
 :root{
     --cor-primaria: #980B34;
@@ -11,8 +11,9 @@
 }
 body{
     font-family: Helvetica, Arial, sans-serif;
+    border-color: white;
     margin: auto;
-    max-width: 1200px;
+    max-width: 1150px;
     background: linear-gradient(to right, var(--cor-primaria), black);
     min-width: 320px;
 }
@@ -32,13 +33,12 @@ h1{
     margin: 10px 5px;
     padding: 2%;
     font-size: 20px;
-    
     background-color: var(--cor-secundaria);
     
 }
 
 .texto {
-    width: 18em;
+    width: 320px;
     height: 2em;
     margin: 0.4em;
     font-weight: bold;
@@ -53,14 +53,19 @@ h1{
     font-size: 15px;
     vertical-align: middle;
 }
+
 .tabela{
-    margin: 0px auto;
-    width: 100%;
+    
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    
 }
 
 .grupo{
     
-    width: 550px;
+    display: flex;
+    flex-direction: column;
     
 }
 
@@ -68,24 +73,26 @@ h1{
     border: solid 1px;
     padding: 13px 0px;
     background-color:var(--cor-terciaria);
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.486);
+    box-shadow: 2px 2px 5px rgba(30, 160, 30, 0.486);
     margin: auto;
     font-weight: bold;
     font-size: 13px;
+    display: flex;
+    flex-direction: column;
+}
+.placar-sem-data{
+    width: 550px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
 }
 
 h3{
     text-align: center;
-    margin-top: 1.5em;
+    margin-top: 18px;
     margin-bottom: 0.3em;
     color: var(--cor-secundaria);
-}
-.tabela{
-    width: 100%;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    
 }
 
 
@@ -95,8 +102,8 @@ h3{
 }
 
 #selecao1, #selecao2{
-    width: 8em;
-    display: inline-block;
+    width: 100px;
+    vertical-align: middle;
     text-align: right;
     height: 25px;
 }
@@ -109,9 +116,7 @@ h3{
     width: 53px;
     height: 35px;
     text-align: center;
-    margin: 0em 0.5em;
-    vertical-align: middle;
-    padding: 0;
+  
 }
 
 .placar{
@@ -119,6 +124,14 @@ h3{
     font-weight: bold;
     font-size: 25px;
 }
+
+.botao{
+    width: 250px;
+    height: 75px;
+    font: 25px bold;
+    margin: 35px;
+}
+
 
 /*extra:*/
 strong{
@@ -128,9 +141,3 @@ strong{
     display: none
 }
 
-.botao{
-    width: 250px;
-    height: 75px;
-    font: 25px bold;
-    margin: 35px;
-}
